NTP4: Remove overflow from .tile-grid to fix app clipping issue.
TEST=Don't breaking anything, save some tubes.
R=estade@chromium.org
BUG=98457


Review URL: http://codereview.chromium.org/8827014

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@113359 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 24e33a05593f6c224f240f006a555bd901d3b1bd

--- a/chrome/browser/resources/ntp4/tile_page.css
+++ b/chrome/browser/resources/ntp4/tile_page.css
@@ -45,7 +45,6 @@
 }
 
 .tile-grid {
-  overflow: hidden;
   position: relative;
   width: 100%;
 }
